# SwarmCast

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
api/: .env.example  config.py  main.py  requirements.txt
api/routes/: compare.py  evidence_pack.py  inject.py  presets.py  simulate.py
api/schemas/: injection.py  jobs.py  policy.py  simulation.py  swarm.py  upload.py
api/services/: evidence_service.py  extraction_service.py  injection_service.py  job_registry.py  simulation_service.py  swarm_calibration_service.py
docs/plans/: 2026-03-24-warm-paper-ui-design.md  2026-03-24-warm-paper-ui.md
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/lib/: api-client.ts  chart-helpers.ts  constants.ts  format.ts  nav-tabs.ts  query-keys.ts  store.ts  types.ts
policylab/: __main__.py  cli.py  disclaimers.py
policylab/agents/: governance_agents.py  human_agent.py  resource_status.py
policylab/components/: actions.py  constraint_enforcer.py  governance_state.py
policylab/features/: blind_spot_finder.py  comparator.py  ensemble.py  stress_tester.py  war_game.py
policylab/game_master/: indicator_dynamics.py  resolution_config.py  resolution_engine.py  sensitivity_layer.py  severity.py  simulation_loop.py
policylab/scenarios/: simple_regulation.py
policylab/v2/: README.md  analysis.py  stress_test_v2.py
policylab/validation/: backtester.py  contamination_guard.py  (+1 more)
swarmcast/: __init__.py  __main__.py  cli.py  llm_backend.py
tests/: test_audit_fixes.py  test_ingest.py  test_v2.py
(+90 files in other folders)
